adding user profile and modify matchView

--- a/best/templates/basic.html
+++ b/best/templates/basic.html
@@ -20,6 +20,173 @@
         #butt{
             margin-right: 50px;
         }
+
+
+
+
+
+
+
+
+
+
+:after,:before{box-sizing:border-box}
+.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after{clear:both;display:block}
+a{color:inherit;text-decoration:none}
+
+.login-wrap{
+	width: 100%;
+	margin:auto;
+	max-width:510px;
+	min-height:510px;
+	position:relative;
+	background:url(https://maxcdn.icons8.com/app/uploads/2016/03/material-1-1000x563.jpg) no-repeat center;
+	background-size: cover;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+}
+.login-html{
+	width:100%;
+	height:100%;
+	position:absolute;
+	padding:90px 70px 50px 70px;
+	background:rgba(0,0,0,0.5);
+}
+.login-html .sign-in-htm,
+.login-html .for-pwd-htm{
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	position:absolute;
+	-webkit-transform:rotateY(180deg);
+	        transform:rotateY(180deg);
+	-webkit-backface-visibility:hidden;
+	        backface-visibility:hidden;
+	-webkit-transition:all .4s linear;
+	transition:all .4s linear;
+}
+.login-html .sign-in,
+.login-html .for-pwd,
+.login-form .group .check{
+	display:none;
+}
+.login-html .tab,
+.login-form .group .label,
+.login-form .group .button{
+	text-transform:uppercase;
+}
+.login-html .tab{
+	font-size:22px;
+	margin-right:15px;
+	padding-bottom:5px;
+	margin:0 15px 10px 0;
+	display:inline-block;
+	border-bottom:2px solid transparent;
+}
+.login-html .sign-in:checked + .tab,
+.login-html .for-pwd:checked + .tab{
+	color:#fff;
+	border-color:#1161ee;
+}
+.login-form{
+	min-height:345px;
+	position:relative;
+	-webkit-perspective:1000px;
+	        perspective:1000px;
+	-webkit-transform-style:preserve-3d;
+	        transform-style:preserve-3d;
+}
+.login-form .group{
+	margin-bottom:15px;
+}
+.login-form .group .label,
+.login-form .group .input,
+.login-form .group .button{
+	width:100%;
+	color:#fff;
+	display:block;
+}
+.login-form .group .input,
+.login-form .group .button{
+	border:none;
+	padding:15px 20px;
+	border-radius:25px;
+	background:rgba(255,255,255,.1);
+}
+.login-form .group input[data-type="password"]{
+	text-security:circle;
+	-webkit-text-security:circle;
+}
+.login-form .group .label{
+	color:#aaa;
+	font-size:12px;
+}
+.login-form .group .button{
+	background:#1161ee;
+}
+.login-form .group label .icon{
+	width:15px;
+	height:15px;
+	border-radius:2px;
+	position:relative;
+	display:inline-block;
+	background:rgba(255,255,255,.1);
+}
+.login-form .group label .icon:before,
+.login-form .group label .icon:after{
+	content:'';
+	width:10px;
+	height:2px;
+	background:#fff;
+	position:absolute;
+	-webkit-transition:all .2s ease-in-out 0s;
+	transition:all .2s ease-in-out 0s;
+}
+.login-form .group label .icon:before{
+	left:3px;
+	width:5px;
+	bottom:6px;
+	-webkit-transform:scale(0) rotate(0);
+	        transform:scale(0) rotate(0);
+}
+.login-form .group label .icon:after{
+	top:6px;
+	right:0;
+	-webkit-transform:scale(0) rotate(0);
+	        transform:scale(0) rotate(0);
+}
+.login-form .group .check:checked + label{
+	color:#fff;
+}
+.login-form .group .check:checked + label .icon{
+	background:#1161ee;
+}
+.login-form .group .check:checked + label .icon:before{
+	-webkit-transform:scale(1) rotate(45deg);
+	        transform:scale(1) rotate(45deg);
+}
+.login-form .group .check:checked + label .icon:after{
+	-webkit-transform:scale(1) rotate(-45deg);
+	        transform:scale(1) rotate(-45deg);
+}
+.login-html .sign-in:checked + .tab + .for-pwd + .tab + .login-form .sign-in-htm{
+	-webkit-transform:rotate(0);
+	        transform:rotate(0);
+}
+.login-html .for-pwd:checked + .tab + .login-form .for-pwd-htm{
+	-webkit-transform:rotate(0);
+	        transform:rotate(0);
+}
+
+.hr{
+	height:2px;
+	margin:60px 0 50px 0;
+	background:rgba(255,255,255,.2);
+}
+.foot-lnk{
+	text-align:center;
+}
     </style>
     <title>
         {% block title %} {% endblock %}
@@ -35,9 +202,64 @@
     </a>
     {% if user.is_authenticated %}
     <P>Hello, {{user.first_name}} </P>
-    <a type="button" id="butt" class="btn btn-success" href="/accounts/logout"> logout </a>
+    <a type="button" id="butt" class="btn btn-success" href="logout"> logout </a>
     {% else %}
-    <a type="button" id="butt" class="btn btn-success" href="/accounts/register"> Register </a>
+<a type="button" id="butt" class="btn btn-success" href="register"> Register </a>
+
+
+    <!-- login pop up-->
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="login-wrap">
+        <div class="login-html">
+          <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+          <input id="tab-2" type="radio" name="tab" class="for-pwd"><label for="tab-2" class="tab">Forgot Password</label>
+          <div class="login-form">
+            <div class="sign-in-htm">
+              <div class="group">
+                <form action="login" method="POST">
+                  {% csrf_token %}
+                <label  class="label">Username or Email</label>
+                <input id="user" name="username" type="text" class="input">
+              </div>
+              <div class="group">
+                <label class="label">Password</label>
+                <input id="pass" type="password" name="password" class="input" data-type="password">
+              </div>
+              <div class="group">
+                <input type="submit" class="button" value="Sign In">
+                </form>
+              </div>
+              <div class="hr"></div>
+            </div>
+            <div class="for-pwd-htm">
+              <div class="group">
+                <label for="user" class="label">Username or Email</label>
+                <input id="user" type="text" class="input">
+              </div>
+              <div class="group">
+                <input type="submit" class="button" value="Reset Password">
+              </div>
+              <div class="hr"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+
+
+
     {% endif %}
   </nav>
    
@@ -45,12 +267,12 @@
 
     <footer class="footer">
         <div class="container">
-          <span class="text-muted" style="margin-right: 50px">Place sticky footer content here.</span>
-          <a href="#"><i class="fa fa-facebook" aria-hidden="true" style="font-size:48px; margin-right: 50px;"></i></a>
-          <a href="#"><i class="fa fa-youtube" aria-hidden="true" style="font-size:48px; margin-right: 50px"></i></a>
-          <a href="#"><i class="fa fa-instagram" aria-hidden="true" style="font-size:48px; margin-right: 50px; color: red;"></i></a>
-          <a href="#" style="font-size:48px; margin-right: 50px">Discord</a>
-          <a href="#"><i class="fa fa-twitch" aria-hidden="true" style="font-size:48px; margin-right: 50px"></i></a>
+          <span class="text-muted" style="margin-right: 50px">Place sticky footer content here. </span>
+          <a href="{{link.0.link}}"><i class="fa fa-facebook" aria-hidden="true" style="font-size:48px; margin-right: 50px;"></i></a>
+          <a href="{{link.1.link}}"><i class="fa fa-youtube" aria-hidden="true" style="font-size:48px; margin-right: 50px"></i></a>
+          <a href="{{link.2.link}}"><i class="fa fa-instagram" aria-hidden="true" style="font-size:48px; margin-right: 50px; color: red;"></i></a>
+          <a href="{{link.3.link}}" style="font-size:48px; margin-right: 50px">Discord</a>
+          <a href="{{link.4.link}}"><i class="fa fa-twitter" aria-hidden="true" style="font-size:48px; margin-right: 50px"></i></a>
         </div>
       </footer>
     <!-- Optional JavaScript -->
