--- a/best/templates/index.html
+++ b/best/templates/index.html
@@ -137,8 +137,12 @@
                     <h5 class="card-title">Match {{i.match_name}}</h5>
                     <h6 class="dat">	&#x1F4C5; {{i.match_date}} &#8986; {{i.match_time}}</h6>
                     <p class="card-text"><span>Resisteration Fee:</span> <i class="fa fa-inr" aria-hidden="true"></i>{{i.match_entry}}</p>
-                    <p class="card-text"><i class="fa fa-trophy"></i>: <i class="fa fa-inr" aria-hidden="true"></i>{{i.winner_prize}}  <i class="fa fa-arrows-h"></i>  Per Kill: <i class="fa fa-inr" aria-hidden="true"></i> {{match.1.per_kill_prize}}</p>
+                    <p class="card-text"><i class="fa fa-trophy"></i>: <i class="fa fa-inr" aria-hidden="true"></i>{{i.winner_prize}}  <i class="fa fa-arrows-h"></i>  Per Kill: <i class="fa fa-inr" aria-hidden="true"></i> {{i.per_kill_prize}}</p>
+                    {% if i.match_date >= today %}
                     <a href="/mdview/{{i.id}}" class="btn btn-outline-warning" role="button" aria-pressed="true" id="btnjn">JOIN NOW</a>
+                    {% else %}
+                    <h4>match completed</h4>
+                    {% endif%}
                 </div>
         </div>
     </div>
@@ -175,6 +179,7 @@
         </iframe>
     </div>
 </div>
+
 
 
 
