--- a/best/templates/register.html
+++ b/best/templates/register.html
@@ -15,35 +15,34 @@
         text-align: center;
         text-decoration: underline;
     }
+    form{
+      margin-top: 3px;
+      margin-bottom: 10px;
+    }
+    .col-8{
+      background-color: aliceblue;
+      border-radius: 20px;
+    }
 </style>
  {% endblock %}
  {% block body %}
- <h1>LogIn</h1>
-<form action="login" method="post">
-    {% csrf_token %}
-<div class="form-group">
-    <label for="exampleFormControlInput1" class="wts">User Name</label>
-    <input type="text" class="form-control" name="username" id="exampleFormControlInput1" placeholder="User Name">
-</div>
-<div class="form-group">
-    <label for="exampleFormControlInput1" class="wts">Password</label>
-    <input type="password" class="form-control" name="password" id="exampleFormControlInput1" placeholder="name@example.com">
-  </div>
-  <input type="submit">
-
-  <h1>OR</h1>
-
-<h1 id="headinga">Register Now</h1>
+ 
 
 
- <div class="container">
+
+ <div class="container my-5">
     <div class="row">
       <div class="col">
         1 of 3
       </div>
       <div class="col-8">
+        <h1 id="headinga">Register Now</h1>
+                {% for message in messages %}
+                <h3>{{message}}</h3>
+                {% endfor %}
         <form action="register" method="post">
                 {% csrf_token %}
+                
             <div class="form-group">
                 <label for="exampleFormControlInput1" class="wts">User Name</label>
                 <input type="text" class="form-control" name="username" id="exampleFormControlInput1" placeholder="User Name">
@@ -70,11 +69,8 @@
                   <input type="password" name="password2" class="form-control" placeholder="Confirm Password">
                 </div>
               </div>
-        
-        
-        
             <div class="form-check my-3">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <input class="form-check-input" type="checkbox" required value="" id="defaultCheck1">
                 <label class="form-check-label" for="defaultCheck1">
                   i agree with <a href="/termsandconditions/">terms and conditions.</a>
                 </label>
