--- a/best/templates/login.html
+++ b/best/templates/login.html
@@ -106,17 +106,18 @@ body{
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="container emp-profile">
-            <form method="post">
-                {% csrf_token %}
+
                 <div class="row">
-               
+                    {% for message in messages %}
+                    <h3>{{message}}</h3>
+                    {% endfor %}
                     <div class="col">
                         <div class="profile-head">
                                     <h5>
                                         {{user.username}}
                                     </h5>
                                     <h6>
-                                        Web Developer and Designer
+                                        {{infos.clan}}
                                     </h6>
                                     <p class="proile-rating">RANKINGS : <span>8/10</span></p>
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -131,7 +132,50 @@ body{
                     </div>
                     <div class="col-md-2">
                         
-                        <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile"/>
+                        <!-- albad suru -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+    Update Profile
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+        <!--form of albad start-->
+        <form method="POST" action="aj">
+            {% csrf_token %}
+            <input type="hidden" name="user" id="user" value="{{user.username}}">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Phone Number</label>
+              <input type="text" class="form-control" name="mobile" id="exampleInputEmail1">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">PUBG ID</label>
+              <input type="text" class="form-control" name="pubg_id" id="exampleInputPassword1">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">PUBG Name</label>
+                <input type="text" class="form-control" name="pubg_username" id="exampleInputEmail1">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Clan Name</label>
+                <input type="text" class="form-control" name="clan_name" id="exampleInputEmail1">
+              </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        <!--albadi form khtam-->
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--albad khtam-->
                     </div>
                 </div>
                 <div class="row">
@@ -168,7 +212,7 @@ body{
                                                 <label>Phone</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>123 456 7890</p>
+                                                <p>+91 {{infos.mobile_no}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -176,7 +220,7 @@ body{
                                                 <label>PUBG Id</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Web Developer and Designer</p>
+                                                <p>{{infos.pubg_id}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -184,7 +228,7 @@ body{
                                                 <label>PUBG Name</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Web Developer and Designer</p>
+                                                <p>{{infos.pubg_username}}</p>
                                             </div>
                                         </div>
                             </div>
@@ -241,8 +285,7 @@ body{
                             </div>
                         </div>
                     </div>
-                </div>
-            </form>           
+                </div>        
         </div>
 
  {% endblock %} 
