--- a/best/templates/mdview.html
+++ b/best/templates/mdview.html
@@ -459,7 +459,8 @@ img.rounded {
                         </div>
                     </div>
                 </div>
-                {{user.username}}
+                {{pubg_info.user.pubg_id}}
+                {% if joined <= 95 %}
                 <form action="sub" method="POST">
                     {% csrf_token %}
                 <input type="hidden" name="match_id" id="match_id" value="{{ myid }}">
@@ -474,40 +475,9 @@ img.rounded {
                       I agree <a href="/termsandconditions/">terms and conditions.</a>
                     </label>
                   </div>
-                  <input type="submit" >
+                  <input type="submit">
                 </form>
                   
-                {% if joined <= 95 %}
-                    <!-- Button trigger modal -->
-                <button type="button" class="btn btn-outline-success my-5" data-toggle="modal" data-target="#exampleModalCenter" id="jbtn">
-                    JOIN NOW
-                  </button>
-                  
-                  <!-- Modal -->
-                  <div class="modal fade1" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered 1" role="document">
-                      <div class="modal-content 1">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalCenterTitle">JOIN BY FILL DETAILS</h5>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                           
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                          <button type="submit" class="btn btn-primary">JOIN NOW</button>
-                        </div>
-                    
-                      </div>
-                    </div>
-                  </div> 
-            </div>
-
-        </div>
-    </div>
     {% else %}
     <h2>Room Full. No more space </h2>
     {% endif %}
