--- a/best/templates/basic.html
+++ b/best/templates/basic.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,12 +11,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body{
-            background-color: black;
+            background-color: aliceblue
         }
         .footer{
             margin-top: 100px;
             min-height: 50px;
             text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+
+            
+            
         }
         #butt{
             margin-right: 50px;
@@ -187,6 +193,16 @@ a{color:inherit;text-decoration:none}
 .foot-lnk{
 	text-align:center;
 }
+#login-nav{
+  text-decoration: underline;
+  color: blue;
+}
+/* #foottag{
+  display: block;
+      margin-left: auto;
+      margin-right: auto; */
+}
+
     </style>
     <title>
         {% block title %} {% endblock %}
@@ -195,84 +211,107 @@ a{color:inherit;text-decoration:none}
   </head>
   <body>
       <!-- Image and text -->
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
-      <img src="/media/preview.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-      GamingKeeda
-    </a>
-    {% if user.is_authenticated %}
-    <P>Hello, {{user.first_name}} </P>
-    <a type="button" id="butt" class="btn btn-success" href="logout"> logout </a>
-    {% else %}
-<a type="button" id="butt" class="btn btn-success" href="register"> Register </a>
-
-
-    <!-- login pop up-->
-    <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="login-wrap">
-        <div class="login-html">
-          <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
-          <input id="tab-2" type="radio" name="tab" class="for-pwd"><label for="tab-2" class="tab">Forgot Password</label>
-          <div class="login-form">
-            <div class="sign-in-htm">
-              <div class="group">
-                <form action="login" method="POST">
-                  {% csrf_token %}
-                <label  class="label">Username or Email</label>
-                <input id="user" name="username" type="text" class="input">
-              </div>
-              <div class="group">
-                <label class="label">Password</label>
-                <input id="pass" type="password" name="password" class="input" data-type="password">
-              </div>
-              <div class="group">
-                <input type="submit" class="button" value="Sign In">
-                </form>
-              </div>
-              <div class="hr"></div>
-            </div>
-            <div class="for-pwd-htm">
-              <div class="group">
-                <label for="user" class="label">Username or Email</label>
-                <input id="user" type="text" class="input">
-              </div>
-              <div class="group">
-                <input type="submit" class="button" value="Reset Password">
-              </div>
-              <div class="hr"></div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">GamingKeeda</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
       
-    </div>
-  </div>
-</div>
-
-
-
-
-    {% endif %}
-  </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact/">Contact Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="/moregames/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Games
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/moregames/">Free Fire</a>
+                <a class="dropdown-item" href="/moregames/">Clash Royale</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/moregames/">PUBG Mobile Lite</a>
+              </div>
+            </li>
+          </ul>
+            {% if user.is_authenticated %}
+            <a type="button" id="butt" class="btn btn-outline-success my-2 my-sm-0" href="logout"> logout </a>
+            {% else %}
+            <button type="button" id="butt" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#exampleModalCenter">
+              Sign In
+              </button>
+              
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="login-wrap">
+                    <div class="login-html">
+                      <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+                      <input id="tab-2" type="radio" name="tab" class="for-pwd"><label for="tab-2" class="tab">Forgot Password</label>
+                      <div class="login-form">
+                        <div class="sign-in-htm">
+                          <div class="group">
+                            <form action="login" method="POST">
+                              {% csrf_token %}
+                              <input type="hidden" name="path1" value="{{request.path}}">
+                            <label  class="label">Username or Email</label>
+                            <input id="user" name="username" type="text" class="input">
+                          </div>
+                          <div class="group">
+                            <label class="label">Password</label>
+                            <input id="pass" type="password" name="password" class="input" data-type="password">
+                          </div>
+                          <div class="group">
+                            <p>Don't have an account. Please <a href="register" id="login-nav">Register Here.</a></p>
+                            <input type="submit" class="button">
+                            </form>
+                          </div>
+                          <div class="hr"></div>
+                        </div>
+                        <div class="for-pwd-htm">
+                          <form method="POST" action="/password-reset/">
+                            {% csrf_token %}
+                         <div class="group">
+                            <label for="user" class="label">Username or Email</label>
+                            <input id="user" type="text" class="input">
+                          </div>
+                          <div class="group">
+                            <input type="submit" class="button" value="Reset Password">
+                          </div>
+                        </form>
+                          <div class="hr"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
+              </div>
+              
+              
+              
+              
+              
+            
+        </div>
+        {% endif %}
+      </nav>
    
     {% block body %} {% endblock %}
 
     <footer class="footer">
-        <div class="container">
-          <span class="text-muted" style="margin-right: 50px">Place sticky footer content here. </span>
-          <a href="{{link.0.link}}"><i class="fa fa-facebook" aria-hidden="true" style="font-size:48px; margin-right: 50px;"></i></a>
-          <a href="{{link.1.link}}"><i class="fa fa-youtube" aria-hidden="true" style="font-size:48px; margin-right: 50px"></i></a>
+        <div class="container" id="footteg">
+          <!-- <span class="text-muted" style="margin-right: 50px">Place sticky footer content here. </span> -->
+          <a href="{{link.0.link}}"><i class="fa fa-facebook" aria-hidden="true" style="font-size:48px; margin-right: 50px; color: #1161ee;"></i></a>
+          <a href="{{link.1.link}}"><i class="fa fa-youtube" aria-hidden="true" style="font-size:48px; margin-right: 50px; color: red;"></i></a>
           <a href="{{link.2.link}}"><i class="fa fa-instagram" aria-hidden="true" style="font-size:48px; margin-right: 50px; color: red;"></i></a>
           <a href="{{link.3.link}}" style="font-size:48px; margin-right: 50px">Discord</a>
-          <a href="{{link.4.link}}"><i class="fa fa-twitter" aria-hidden="true" style="font-size:48px; margin-right: 50px"></i></a>
+          <a href="{{link.4.link}}"><i class="fa fa-twitter" aria-hidden="true" style="font-size:48px; margin-right: 50px; color: aqua;"></i></a>
         </div>
       </footer>
     <!-- Optional JavaScript -->
@@ -284,6 +323,8 @@ a{color:inherit;text-decoration:none}
         $(function () {
   $('[data-toggle="popover"]').popover()
 })
+
+
     </script>
   </body>
 </html>
