--- a/best/templates/login.html
+++ b/best/templates/login.html
@@ -132,50 +132,7 @@ body{
                     </div>
                     <div class="col-md-2">
                         
-                        <!-- albad suru -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-    Update Profile
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-        <!--form of albad start-->
-        <form method="POST" action="aj">
-            {% csrf_token %}
-            <input type="hidden" name="user" id="user" value="{{user.username}}">
-            <div class="form-group">
-              <label for="exampleInputEmail1">Phone Number</label>
-              <input type="text" class="form-control" name="mobile" id="exampleInputEmail1">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">PUBG ID</label>
-              <input type="text" class="form-control" name="pubg_id" id="exampleInputPassword1">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">PUBG Name</label>
-                <input type="text" class="form-control" name="pubg_username" id="exampleInputEmail1">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Clan Name</label>
-                <input type="text" class="form-control" name="clan_name" id="exampleInputEmail1">
-              </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        <!--albadi form khtam-->
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--albad khtam-->
+                     
                     </div>
                 </div>
                 <div class="row">
@@ -212,7 +169,7 @@ body{
                                                 <label>Phone</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>+91 {{infos.mobile_no}}</p>
+                                                <p>+91 {{data.phone}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -220,7 +177,7 @@ body{
                                                 <label>PUBG Id</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>{{infos.pubg_id}}</p>
+                                                <p id="must">{{data.pubg_id}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -228,7 +185,7 @@ body{
                                                 <label>PUBG Name</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>{{infos.pubg_username}}</p>
+                                                <p>{{data.pubg_name}}</p>
                                             </div>
                                         </div>
                             </div>
