--- a/best/templates/register.html
+++ b/best/templates/register.html
@@ -10,10 +10,11 @@
         color: greenyellow;
     }
     #headinga{
-        color: red;
+        color:gray;
         font-family: "Comic Sans MS", cursive, sans-serif;
         text-align: center;
         text-decoration: underline;
+        margin-top: 15px;
     }
     form{
       margin-top: 3px;
@@ -22,6 +23,22 @@
     .col-8{
       background-color: aliceblue;
       border-radius: 20px;
+      border-style: solid;
+      border-color: black;
+    }
+    #errorm{
+      color: red;
+      text-align: center;
+    }
+    #subbtn{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      min-width: 100px;
+    }
+    #tandc{
+      text-decoration: underline;
+      color: blue;
     }
 </style>
  {% endblock %}
@@ -33,53 +50,59 @@
  <div class="container my-5">
     <div class="row">
       <div class="col">
-        1 of 3
+        
       </div>
       <div class="col-8">
         <h1 id="headinga">Register Now</h1>
                 {% for message in messages %}
-                <h3>{{message}}</h3>
+                <p id="errorm">** {{message}} **</p>
                 {% endfor %}
         <form action="register" method="post">
                 {% csrf_token %}
                 
-            <div class="form-group">
+            <div class="form-group my-3">
                 <label for="exampleFormControlInput1" class="wts">User Name</label>
-                <input type="text" class="form-control" name="username" id="exampleFormControlInput1" placeholder="User Name">
+                <input type="text" class="form-control" name="username" required id="exampleFormControlInput1" placeholder="User Name">
             </div>
-            <div class="form-group">
+            <div class="form-group my-3">
                 <label for="exampleFormControlInput1" class="wts">First Name</label>
-                <input type="text" class="form-control" name="first_name" id="exampleFormControlInput1" placeholder="First Name">
+                <input type="text" class="form-control" name="first_name" required id="exampleFormControlInput1" placeholder="First Name">
             </div>
-            <div class="form-group">
+            <div class="form-group my-3">
                 <label for="exampleFormControlInput1" class="wts">Last Name</label>
-                <input type="text" class="form-control" name="last_name" id="exampleFormControlInput1" placeholder="Last Name">
+                <input type="text" class="form-control" name="last_name" required id="exampleFormControlInput1" placeholder="Last Name">
             </div>
-            <div class="form-group">
+            <div class="form-group my-3">
               <label for="exampleFormControlInput1" class="wts">Email address</label>
-              <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="name@example.com">
+              <input type="email" class="form-control" name="email" required id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
-            <div class="form-row">
+            <div class="form-row my-3">
                 <div class="col">
                   <label for="exampleFormControlInput1" class="wts">Password</label>
-                  <input type="password" name="password1" class="form-control" placeholder="Password">
+                  <input type="password" name="password1" class="form-control" required placeholder="Password">
                 </div>
                 <div class="col">
                   <label for="exampleFormControlInput1" class="wts">Confirm Password</label>
-                  <input type="password" name="password2" class="form-control" placeholder="Confirm Password">
+                  <input type="password" name="password2" class="form-control" required placeholder="Confirm Password">
                 </div>
               </div>
-            <div class="form-check my-3">
+            <div class="form-check mt-4">
                 <input class="form-check-input" type="checkbox" required value="" id="defaultCheck1">
                 <label class="form-check-label" for="defaultCheck1">
-                  i agree with <a href="/termsandconditions/">terms and conditions.</a>
+                  I agree with <a href="/termsandconditions/" id="tandc">terms and conditions.</a>
                 </label>
             </div>
-            <input class="btn btn-primary btn-sm" type="submit" method='POST'>
+            <div class="form-check mb-4">
+              <input class="form-check-input" type="checkbox" required value="" id="defaultCheck1">
+              <label class="form-check-label" for="defaultCheck1">
+                I hearby certify that I am over 16 years old and authorized to use GamingKeeda </br>services by my legal representative(Father, Mother, legal gardian).
+              </label>
+          </div>
+            <input class="btn btn-outline-success" id="subbtn" type="submit" method='POST'>
           </form>
       </div>
       <div class="col">
-        3 of 3
+        
       </div>
     </div>
 
