--- a/best/templates/index.html
+++ b/best/templates/index.html
@@ -124,7 +124,6 @@
     <div class="card-img-overlay">
       {% if user.is_authenticated %}
         <p class="card-text">Hello,{{user.first_name}} {{user.last_name}}</p>
-        <p class="card-text">{{data.pubg_name}}</p>
         <p class="card-text" id="must1">
 {% endif %}
         </p>
@@ -142,7 +141,7 @@
     {% for i in match|slice:"0:" %}
         
     
-    <div class="col-3 my-3">
+    <div class="col-md-3">
         <div class="card">
             <img class="card-img-top" src="{{ i.match_pics.url }}" alt="Card image cap">
                 <div class="card-body">
@@ -155,12 +154,14 @@
                     {% else %}
                     <a class="btn btn-outline-warning" role="button" aria-pressed="true" id="btnjn">Match Completed</a>
                     {% endif%}
+                    
                 </div>
         </div>
     </div>
     
     {% endfor %}
 </div>
+
 
 
 <!-- End of first cards row -->
@@ -177,32 +178,24 @@
 <div class="row mx-3">
     <div class="col-sm">
         <h3 style="text-align: center; color: aliceblue;"> Match #0001 </h3>
-        <iframe width="400" height="250"
+        <iframe width="350px"
             src="https://www.youtube.com/embed/P3eCxiOXolI?autoplay=1">
         </iframe>
     </div>
     <div class="col-sm">
         <h3 style="text-align: center; color: aliceblue;"> Match #0002 </h3>
-        <iframe width="400" height="250"
+        <iframe width="350px"
             src="https://www.youtube.com/embed/tuWPtzKNJhw?autoplay=1">
         </iframe>
     </div>
     <div class="col-sm">
         <h3 style="text-align: center; color: aliceblue;"> Match #0003 </h3>
-        <iframe width="400" height="250"
+        <iframe width="350px"
             src="https://www.youtube.com/embed/pnMwZyB12KE?autoplay=1">
         </iframe>
     </div>
 </div>
 
-
-
-
-<!-- <script>
-window.onload = function(){
-      document.getElementById('path2').click();
-}
-</script> -->
 
 
 
