--- a/best/templates/paymentstatus.html
+++ b/best/templates/paymentstatus.html
@@ -24,17 +24,16 @@
 <div class="container">
     
     <div class="col my-4">
-
         <h2 id="head1" class="heading mt-5">Payment status regarding your order ID {{response.ORDERID}}</h2>
         {% if response.RESPCODE == '01' %}
         
         <h1 class="status"><i class="fa fa-check" aria-hidden="true" style="color: green; font-size: 200px;"></i></h1>
-        <h1 style="text-align: center;">ORDER SUCCESS</h1>
+        <h1 style="text-align: center;">JOINED MATCH SUCCESS</h1>
         <p style="text-align: center;">You have successfully joined match. You pay Rs. {{response.TXNAMOUNT}} as entry fee. </br> Come at time and enjoy the match with earning. </br> Thank You For Joining.</p>
-        <p style="text-align: center; color: blue;">Search for more Matches <a href="/#heading1">Click Here</a></p>
+        <p style="text-align: center; color: blue;">Search for more Matches <a href="/#head1">Click Here</a></p>
         {% else %}
         <h1 class="status"><i class="fa fa-times" aria-hidden="true"  style="color: red; font-size: 200px;"></i></h1>
-        <h1 style="text-align: center;">ORDER FAILURE</h1>
+        <h1 style="text-align: center;">FAIL TO JOIN MATCH</h1>
         <p id="msg">{{response.RESPMSG}}.</p>
         <p style="text-align: center; color: blue;">Search for more Matches <a href="/#heading1">Click Here</a></p>
         
