--- a/best/templates/register2.html
+++ b/best/templates/register2.html
@@ -106,10 +106,12 @@
                 {% endfor %}
         <form action="pubgin" method="post">
                 {% csrf_token %}
-            <input type="hidden" name="id" value="{{user.id}}">  
+            <input type="hidden" name="id" value="{{user.id}}">
+            <input type="hidden" name="id" value="{{user.username}}">  
             <div class="form-group">
                 <label for="exampleFormControlInput1" class="wts">PayTm No.</label>
                 <input type="tel" maxlength="10" minlength="10" required class="form-control" name="phone" id="exampleFormControlInput1" placeholder="9999999999">
+                <p><small>This field is required. if you left it blank your prize money is not sent.</small></p>
             </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1" class="wts">PUBG Name</label>
@@ -119,14 +121,6 @@
                 <label for="exampleFormControlInput1" class="wts">PUBG ID</label>
                 <input type="number" maxlength="9" minlength="9" class="form-control" name="pubg_id" id="exampleFormControlInput1" placeholder="123456789">
             </div>
-            <div class="form-group">
-              <label for="exampleFormControlInput1" class="wts">Age</label>
-              <input type="date" required class="form-control" name="age" id="exampleFormControlInput1" placeholder="">
-            </div>
-            <div class="form-group mb-5">
-                <label for="exampleFormControlInput1" class="wts">Country</label>
-                <input type="text" required class="form-control" name="country" id="exampleFormControlInput1" placeholder="e.g. India">
-              </div>
             <input class="btn btn-outline-success" id="subbtn" type="submit" method='POST'>
           </form>
       </div>
