--- a/best/templates/basic.html
+++ b/best/templates/basic.html
@@ -252,7 +252,7 @@ a{color:inherit;text-decoration:none}
                               {% csrf_token %}
                               <div class="group">
                                 <input type="hidden" name="path1" value="{{request.path}}">
-                                <label  class="label">Username or Email</label>
+                                <label  class="label">Username</label>
                                 <input id="user" name="username" type="text" class="input">
                               </div>
                               <div class="group">
