--- a/best/templates/register2.html
+++ b/best/templates/register2.html
@@ -107,7 +107,7 @@
         <form action="pubgin" method="post">
                 {% csrf_token %}
             <input type="hidden" name="id" value="{{user.id}}">
-            <input type="hidden" name="id" value="{{user.username}}">  
+            <input type="hidden" name="user" value="{{user.username}}">  
             <div class="form-group">
                 <label for="exampleFormControlInput1" class="wts">PayTm No.</label>
                 <input type="tel" maxlength="10" minlength="10" required class="form-control" name="phone" id="exampleFormControlInput1" placeholder="9999999999">
@@ -119,7 +119,7 @@
             </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1" class="wts">PUBG ID</label>
-                <input type="number" maxlength="9" minlength="9" class="form-control" name="pubg_id" id="exampleFormControlInput1" placeholder="123456789">
+                <input type="number" maxlength="11" minlength="9" class="form-control" name="pubg_id" id="exampleFormControlInput1" placeholder="123456789">
             </div>
             <input class="btn btn-outline-success" id="subbtn" type="submit" method='POST'>
           </form>
