--- a/best/templates/mdview.html
+++ b/best/templates/mdview.html
@@ -488,7 +488,7 @@ img.rounded {
                 <input type="hidden" name="email" id="email" value="{{user.email}}">
                 <div class="pubginfo mx-3">
                     <label class="mr-3">PUBG ID :-</label>
-                    <input class="ml-2"type="text" name="pubg_id" placeholder="PUBG ID">
+                    <input class="ml-2"type="number" name="pubg_id" placeholder="PUBG ID">
                 </div>
             
                 <div class="form-check my-3 mx-3">
