--- a/best/templates/index.html
+++ b/best/templates/index.html
@@ -180,19 +180,19 @@
     <div class="col-sm">
         <h3 style="text-align: center; color: aliceblue;"> Match #0001 </h3>
         <iframe width="300"
-            src="https://www.youtube.com/embed/P3eCxiOXolI?autoplay=1">
+            src="https://www.youtube.com/embed/P3eCxiOXolI">
         </iframe>
     </div>
     <div class="col-sm">
         <h3 style="text-align: center; color: aliceblue;"> Match #0002 </h3>
         <iframe width="300"
-            src="https://www.youtube.com/embed/tuWPtzKNJhw?autoplay=1">
+            src="https://www.youtube.com/embed/tuWPtzKNJhw">
         </iframe>
     </div>
     <div class="col-sm">
         <h3 style="text-align: center; color: aliceblue;"> Match #0003 </h3>
         <iframe width="300"
-            src="https://www.youtube.com/embed/pnMwZyB12KE?autoplay=1">
+            src="https://www.youtube.com/embed/pnMwZyB12KE">
         </iframe>
     </div>
 </div>
