--- a/best/templates/mdview.html
+++ b/best/templates/mdview.html
@@ -509,7 +509,7 @@ img.rounded {
 
     {% else %}
     <h4>Please Sign In to join a match</h4>
-    <a href="/loginpage">Join Now</a>
+    <a href="/">Join Now</a>
 
     
 		</div>
