--- a/best/templates/basic.html
+++ b/best/templates/basic.html
@@ -200,6 +200,7 @@ a{color:inherit;text-decoration:none}
     <title>
         {% block title %} {% endblock %}
     </title>
+    <script data-ad-client="ca-pub-6566283765849886" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% block head %} {% endblock %}
   </head>
   <body>
