adding meta tags

--- a/best/templates/index.html
+++ b/best/templates/index.html
@@ -3,6 +3,11 @@
  {% block head %}
  <meta name="description" content="Play! Win! and Earn! Best Pubg Mobile Tournament website. Come to earn by play PUBG. Best match making low entry fee and high prizepool. Trusted by many youtubers.">
  <meta name="keywords" content="Gaming Keeda, gamingkeeda, gaming keeda, PUBG Tournament, play and earn, Play games and earn, Esports india, Free pubg Tournament, Daily pubg Matches">
+ <meta name="robots" content="index,follow">
+ <meta name="googlebot" content="index,follow">
+ <meta property="og:type" content="website">
+ <meta property="og:locale" content="en_IN">
+ <meta property="og:site_name" content="GamingKeeda">
  <style>
 
      .card-img{
