--- a/best/templates/terms.html
+++ b/best/templates/terms.html
@@ -1,6 +1,14 @@
 {% extends 'basic.html' %}
  {% block title%} Terms and Conditions {% endblock %} 
  {% block head %}
+ <meta name="description" content="These are the terms and conditions of our services that are provided by GamingKeeda. If tou are using our services then you have to read these. GamingKeeda.">
+ <meta name="keywords" content="Gaming Keeda, gamingkeeda, gaming keeda, PUBG Tournament, play and earn, Play games and earn, Esports india, Free pubg Tournament, Daily pubg Matches">
+ <meta name="robots" content="index,follow">
+ <meta name="googlebot" content="index,follow">
+ <meta property="og:type" content="website">
+ <meta property="og:locale" content="en_IN">
+ <meta property="og:site_name" content="GamingKeeda">
+
 <style>
     .head2{
         text-align: center;
