--- a/best/templates/mdview.html
+++ b/best/templates/mdview.html
@@ -1,6 +1,13 @@
 {% extends 'basic.html' %}
 {% block title%} Match Detail {% endblock %} 
 {% block head %}
+<meta name="description" content="Hare you can join the PUBG tournament In India and play many other games like PUBG mobile, PUBG mobile lite, call of duty, clash Royale etc. with real cash earning. Welcome to GamingKeeda"
+ <meta name="keywords" content="Gaming Keeda, gamingkeeda, gaming keeda, PUBG Tournament, play and earn, Play games and earn, Esports india, Free pubg Tournament, Daily pubg Matches">
+ <meta name="robots" content="index,follow">
+ <meta name="googlebot" content="index,follow">
+ <meta property="og:type" content="website">
+ <meta property="og:locale" content="en_IN">
+ <meta property="og:site_name" content="GamingKeeda">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
